; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_dib7000p.c_dib7000p_set_output_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_dib7000p.c_dib7000p_set_output_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dib7000p_state = type { i64, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i64, i32 }

@.str = private unnamed_addr constant [40 x i8] c"setting output mode for demod %p to %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [53 x i8] c"Unhandled output_mode passed to be set for demod %p\0A\00", align 1
@SOC7090 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dib7000p_state*, i32)* @dib7000p_set_output_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dib7000p_set_output_mode(%struct.dib7000p_state* %0, i32 %1) #0 {
  %3 = alloca %struct.dib7000p_state*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.dib7000p_state* %0, %struct.dib7000p_state** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  store i32 1792, i32* %7, align 4
  %9 = load %struct.dib7000p_state*, %struct.dib7000p_state** %3, align 8
  %10 = call i32 @dib7000p_read_word(%struct.dib7000p_state* %9, i32 235)
  %11 = and i32 %10, 80
  %12 = or i32 %11, 2
  store i32 %12, i32* %8, align 4
  %13 = load %struct.dib7000p_state*, %struct.dib7000p_state** %3, align 8
  %14 = getelementptr inbounds %struct.dib7000p_state, %struct.dib7000p_state* %13, i32 0, i32 2
  %15 = load i32, i32* %4, align 4
  %16 = call i32 (i8*, i32*, ...) @dprintk(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32* %14, i32 %15)
  %17 = load i32, i32* %4, align 4
  switch i32 %17, label %35 [
    i32 129, label %18
    i32 130, label %19
    i32 128, label %20
    i32 133, label %21
    i32 131, label %30
    i32 134, label %33
    i32 132, label %34
  ]

18:                                               ; preds = %2
  store i32 1024, i32* %6, align 4
  br label %39

19:                                               ; preds = %2
  store i32 1088, i32* %6, align 4
  br label %39

20:                                               ; preds = %2
  store i32 1152, i32* %6, align 4
  br label %39

21:                                               ; preds = %2
  %22 = load %struct.dib7000p_state*, %struct.dib7000p_state** %3, align 8
  %23 = getelementptr inbounds %struct.dib7000p_state, %struct.dib7000p_state* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %21
  store i32 1280, i32* %6, align 4
  br label %29

28:                                               ; preds = %21
  store i32 2048, i32* %6, align 4
  br label %29

29:                                               ; preds = %28, %27
  br label %39

30:                                               ; preds = %2
  %31 = load i32, i32* %8, align 4
  %32 = or i32 %31, 6
  store i32 %32, i32* %8, align 4
  store i32 512, i32* %7, align 4
  store i32 1344, i32* %6, align 4
  br label %39

33:                                               ; preds = %2
  store i32 1216, i32* %6, align 4
  br label %39

34:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %39

35:                                               ; preds = %2
  %36 = load %struct.dib7000p_state*, %struct.dib7000p_state** %3, align 8
  %37 = getelementptr inbounds %struct.dib7000p_state, %struct.dib7000p_state* %36, i32 0, i32 2
  %38 = call i32 (i8*, i32*, ...) @dprintk(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.1, i64 0, i64 0), i32* %37)
  br label %39

39:                                               ; preds = %35, %34, %33, %30, %29, %20, %19, %18
  %40 = load %struct.dib7000p_state*, %struct.dib7000p_state** %3, align 8
  %41 = getelementptr inbounds %struct.dib7000p_state, %struct.dib7000p_state* %40, i32 0, i32 1
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %48

45:                                               ; preds = %39
  %46 = load i32, i32* %8, align 4
  %47 = or i32 %46, 32
  store i32 %47, i32* %8, align 4
  br label %48

48:                                               ; preds = %45, %39
  %49 = load %struct.dib7000p_state*, %struct.dib7000p_state** %3, align 8
  %50 = load i32, i32* %8, align 4
  %51 = call i32 @dib7000p_write_word(%struct.dib7000p_state* %49, i32 235, i32 %50)
  %52 = load i32, i32* %5, align 4
  %53 = or i32 %52, %51
  store i32 %53, i32* %5, align 4
  %54 = load %struct.dib7000p_state*, %struct.dib7000p_state** %3, align 8
  %55 = load i32, i32* %7, align 4
  %56 = call i32 @dib7000p_write_word(%struct.dib7000p_state* %54, i32 236, i32 %55)
  %57 = load i32, i32* %5, align 4
  %58 = or i32 %57, %56
  store i32 %58, i32* %5, align 4
  %59 = load %struct.dib7000p_state*, %struct.dib7000p_state** %3, align 8
  %60 = getelementptr inbounds %struct.dib7000p_state, %struct.dib7000p_state* %59, i32 0, i32 0
  %61 = load i64, i64* %60, align 8
  %62 = load i64, i64* @SOC7090, align 8
  %63 = icmp ne i64 %61, %62
  br i1 %63, label %64, label %70

64:                                               ; preds = %48
  %65 = load %struct.dib7000p_state*, %struct.dib7000p_state** %3, align 8
  %66 = load i32, i32* %6, align 4
  %67 = call i32 @dib7000p_write_word(%struct.dib7000p_state* %65, i32 1286, i32 %66)
  %68 = load i32, i32* %5, align 4
  %69 = or i32 %68, %67
  store i32 %69, i32* %5, align 4
  br label %70

70:                                               ; preds = %64, %48
  %71 = load i32, i32* %5, align 4
  ret i32 %71
}

declare dso_local i32 @dib7000p_read_word(%struct.dib7000p_state*, i32) #1

declare dso_local i32 @dprintk(i8*, i32*, ...) #1

declare dso_local i32 @dib7000p_write_word(%struct.dib7000p_state*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
